Fix iframe scroll on Android tablets, add scrollbar (#117)

--- a/skins/elastic/styles/layout.less
+++ b/skins/elastic/styles/layout.less
@@ -152,11 +152,20 @@ body > #layout {
     }
 }
 
-html.iframe body {
-    overflow: auto;
+html.iframe {
+    &.ipad,
+    &.iphone,
+    &.webkit.mobile,
+    &.webkit.tablet {
+        .webkit-scroller;
+    }
 
-    #layout > .content {
-        height: 100%;
+    body {
+        overflow: auto;
+
+        #layout > .content {
+            height: 100%;
+        }
     }
 }
 
