--- a/skins/elastic/styles/mixins.less
+++ b/skins/elastic/styles/mixins.less
@@ -55,3 +55,23 @@
 .font-family {
     font-family: Roboto, sans-serif;
 }
+
+.webkit-scroller {
+    ::-webkit-scrollbar {
+        -webkit-appearance: none;
+    }
+
+    ::-webkit-scrollbar:vertical {
+        width: .6rem;
+    }
+
+    ::-webkit-scrollbar:horizontal {
+        height: .6rem;
+    }
+
+    ::-webkit-scrollbar-thumb {
+        background-color: rgba(0, 0, 0, .4);
+        border-radius: .3rem;
+        border: 2px solid #fff;
+    }
+}
